--- a/index.html
+++ b/index.html
@@ -4,59 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gyroskop Test</title>
-    <style>
-        body { 
-            text-align: center; 
-            font-family: Arial, sans-serif; 
-            margin: 50px; 
-        }
-        #box { 
-            width: 100px; 
-            height: 100px; 
-            background: red; 
-            position: relative; 
-            margin: auto; 
-            transition: transform 0.1s linear; 
-        }
-        button {
-            padding: 10px;
-            margin-top: 20px;
-            font-size: 16px;
-        }
-    </style>
+    <script src="script.js" ></script>
 </head>
 <body>
     <h1>Gyroskop Test</h1>
-    <p>Alpha: <span id="alpha">0</span></p>
-    <p>Beta: <span id="beta">0</span></p>
-    <p>Gamma: <span id="gamma">0</span></p>
-    <div id="box"></div>
-    <button onclick="startGyro()">Starta sensorer</button>
-
-    <script>
-        function startGyro() {
-            if (window.DeviceOrientationEvent) {
-                window.addEventListener("deviceorientation", event => {
-                    // Kontrollera om data är null, annars visa "N/A"
-                    let alpha = event.alpha !== null ? event.alpha.toFixed(2) : "N/A";
-                    let beta = event.beta !== null ? event.beta.toFixed(2) : "N/A";
-                    let gamma = event.gamma !== null ? event.gamma.toFixed(2) : "N/A";
-
-                    document.getElementById('alpha').textContent = alpha;
-                    document.getElementById('beta').textContent = beta;
-                    document.getElementById('gamma').textContent = gamma;
-
-                    // Rör en ruta baserat på telefonens lutning
-                    let box = document.getElementById("box");
-                    box.style.transform = `rotate(${gamma}deg) translateY(${beta}px)`;
-                });
-            } else {
-                alert("Din enhet stöder inte DeviceOrientationEvent.");
-            }
-        }
-
-        // Försök starta automatiskt om det är möjligt
-        startGyro();
-    </script>
+    <p>X: <span id="x">0</span></p>
+    <p>Y: <span id="y">0</span></p>
+    <p>Z: <span id="z">0</span></p>
+    <button id=”startBtn”>Starta sensorer</button>
+    
 </body>
 </html>
+
+
