--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>X: <span id="x">0</span></p>
     <p>Y: <span id="y">0</span></p>
     <p>Z: <span id="z">0</span></p>
-    <button id=”startBtn”>Starta sensorer</button>
+    <button id="startBtn">Starta sensorer</button>
     
 </body>
 </html>
