--- a/index.html
+++ b/index.html
@@ -3,35 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geolocation API Test</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-            margin: 50px;
-        }
-        button {
-            padding: 10px;
-            margin: 10px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        #status {
-            font-weight: bold;
-            color: blue;
-        }
-    </style>
+    <title>GPS Spårning</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js" defer></script>
+    <style>
+        body { text-align: center; font-family: Arial, sans-serif; margin: 20px; }
+        button { padding: 10px; margin: 5px; font-size: 16px; cursor: pointer; }
+        #map { width: 100%; height: 400px; margin-top: 20px; }
+    </style>
 </head>
 <body>
-    <h1>Geolocation API - Hämta din position</h1>
-    <p><strong>Nuvarande position:</strong></p>
-    <p>Latitud: <span id="latitude">N/A</span></p>
-    <p>Longitud: <span id="longitude">N/A</span></p>
-    <p id="status">Tryck på en knapp för att hämta din position.</p>
+    <h1>GPS Spårning</h1>
+    <p>Latitud: <span id="lat">N/A</span></p>
+    <p>Longitud: <span id="lng">N/A</span></p>
     
-    <button onclick="getCurrentLocation()">Hämta enstaka position</button>
+    <button onclick="getLocation()">Hämta position</button>
     <button onclick="startTracking()">Börja spåra</button>
-    <button onclick="stopTracking()">Stoppa spårning</button>
+    <button onclick="stopTracking()">Stoppa</button>
+
+    <div id="map"></div>
 </body>
 </html>
