--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
 </head>
 <body>
     <h1>GPS Spårning</h1>
+    <p id="status">Spårning ej påbörjad.</p>
     <p>Latitud: <span id="lat">N/A</span></p>
     <p>Longitud: <span id="lng">N/A</span></p>
+    <p>Startade: <span id="startCount">0</span> gånger</p>
+    <p>Stoppade: <span id="stopCount">0</span> gånger</p>
+    
     <button onclick="getLocation()">Hämta position</button>
+    <button onclick="startTracking()">Börja spåra</button>
+    <button onclick="stopTracking()">Stoppa</button>
+
     <div id="map"></div>
 </body>
 </html>
