--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GPS Spårning</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="script.js" defer></script>
     <style>
         body { text-align: center; font-family: Arial, sans-serif; margin: 20px; }
         button { padding: 10px; margin: 5px; font-size: 16px; cursor: pointer; }
-        #map { width: 100%; height: 400px; margin-top: 20px; }
     </style>
 </head>
 <body>
@@ -18,13 +15,9 @@
     <p id="status">Spårning ej påbörjad.</p>
     <p>Latitud: <span id="lat">N/A</span></p>
     <p>Longitud: <span id="lng">N/A</span></p>
-    <p>Startade: <span id="startCount">0</span> gånger</p>
-    <p>Stoppade: <span id="stopCount">0</span> gånger</p>
-    
-    <button onclick="getLocation()">Hämta position</button>
+    <p>Uppdateringar: <span id="updateCount">0</span></p>
+
     <button onclick="startTracking()">Börja spåra</button>
     <button onclick="stopTracking()">Stoppa</button>
-
-    <div id="map"></div>
 </body>
 </html>
