--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPS Spårning</title>
+    <title>Gamepad API - W3C Standard</title>
     <script src="script.js" defer></script>
     <style>
         body { text-align: center; font-family: Arial, sans-serif; margin: 20px; }
-        button { padding: 10px; margin: 5px; font-size: 16px; cursor: pointer; }
+        #status { font-weight: bold; color: blue; }
+        pre { background: #f4f4f4; padding: 10px; display: inline-block; text-align: left; }
     </style>
 </head>
 <body>
-    <h1>GPS Spårning</h1>
-    <p id="status">Spårning ej påbörjad.</p>
-    <p>Latitud: <span id="lat">N/A</span></p>
-    <p>Longitud: <span id="lng">N/A</span></p>
-    <p>Uppdateringar: <span id="updateCount">0</span></p>
-
-    <button onclick="startTracking()">Börja spåra</button>
-    <button onclick="stopTracking()">Stoppa</button>
+    <h1>Gamepad API - W3C Standard</h1>
+    <p id="status">Anslut en gamepad och tryck på en knapp.</p>
+    <pre id="gamepadInfo">Ingen gamepad upptäckt</pre>
 </body>
 </html>
