--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gamepad API - W3C Standard</title>
-    <script src="script.js" defer></script>
-    <style>
-        body { text-align: center; font-family: Arial, sans-serif; margin: 20px; }
-        #status { font-weight: bold; color: blue; }
-        pre { background: #f4f4f4; padding: 10px; display: inline-block; text-align: left; }
-    </style>
+    <title>Gyroskop Test</title>
+    <script src="script.js" defer ></script>
 </head>
 <body>
-    <h1>Gamepad API - W3C Standard</h1>
-    <p id="status">Anslut en gamepad och tryck på en knapp.</p>
-    <pre id="gamepadInfo">Ingen gamepad upptäckt</pre>
+    <h1>Gyroskop Test</h1>
+    <p>X: <span id="x">0</span></p>
+    <p>Y: <span id="y">0</span></p>
+    <p>Z: <span id="z">0</span></p>
+    <button id=”startBtn”>Starta sensorer</button>
+    
 </body>
 </html>
+
+
