--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gyroskop Test</title>
-    <script src="script.js" defer ></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <h1>Gyroskop Test</h1>
     <p>X: <span id="x">0</span></p>
     <p>Y: <span id="y">0</span></p>
     <p>Z: <span id="z">0</span></p>
-    <button id=”startBtn”>Starta sensorer</button>
-    
+    <button id="startBtn">Starta sensorer</button>
 </body>
 </html>
-
-
