--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gyroskop Test</title>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>Gyroskop Test</h1>
+    <h1> Test</h1>
     <p>X: <span id="x">0</span></p>
     <p>Y: <span id="y">0</span></p>
     <p>Z: <span id="z">0</span></p>
     <button id="startBtn">Starta sensorer</button>
+    <div id="box"></div>
 </body>
 </html>
